--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -77,6 +77,8 @@ Library
      Converter.CNF2LP
      Converter.ObjType
      Converter.PB2LP
+     Converter.LP2SMT
+     Converter.LP2Yices
      Data.AlgebraicNumber
      Data.AlgebraicNumber.Root
      Data.ArithRel
@@ -241,6 +243,7 @@ Executable lp2smt
   HS-Source-Dirs: src
   Other-Modules:
      Text.LPFile
+     Converter.LP2SMT
      Util
   Build-Depends: base >=4 && <5, mtl, containers, parsec, OptDir
   Extensions:
@@ -256,6 +259,7 @@ Executable lp2yices
   HS-Source-Dirs: src
   Other-Modules:
      Text.LPFile
+     Converter.LP2Yices
      Util
   Build-Depends: base >=4 && <5, mtl, containers, parsec, OptDir
   Extensions:
