--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -78,7 +78,6 @@ Library
      Converter.ObjType
      Converter.PB2LP
      Converter.LP2SMT
-     Converter.LP2Yices
      Data.AlgebraicNumber
      Data.AlgebraicNumber.Root
      Data.ArithRel
@@ -259,7 +258,7 @@ Executable lp2yices
   HS-Source-Dirs: src
   Other-Modules:
      Text.LPFile
-     Converter.LP2Yices
+     Converter.LP2SMT
      Util
   Build-Depends: base >=4 && <5, mtl, containers, parsec, OptDir
   Extensions:
