--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -109,10 +109,10 @@ Library
      Text.MaxSAT
      Text.PBFile
      Text.SDPFile
+     Util
   Other-Modules:
      Data.IndexedPriorityQueue
      Data.SeqQueue
-     Util
      Version
      Paths_toysolver
 
@@ -375,6 +375,13 @@ Test-suite TestPBFile
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestPBFile.hs
+  Build-depends:     base >=4 && <5, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
+  Extensions: TemplateHaskell, DoAndIfThenElse
+
+Test-suite TestUtil
+  Type:              exitcode-stdio-1.0
+  HS-Source-Dirs:    test
+  Main-is:           TestUtil.hs
   Build-depends:     base >=4 && <5, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
   Extensions: TemplateHaskell, DoAndIfThenElse
 
