add "GHC-Prof-Options: -auto-all" to Library entry in .cabal

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -117,6 +117,7 @@ Library
      Data.IndexedPriorityQueue
      Data.SeqQueue
      Paths_toysolver
+  GHC-Prof-Options: -auto-all
 
 Executable toysolver
   Main-is: toysolver.hs
