rename Converter.CNF2LP module into more appropriate name Converter.SAT2LP

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -74,7 +74,7 @@ Library
      Algorithm.OmegaTest
      Algorithm.Simplex
      Algorithm.Simplex2
-     Converter.CNF2LP
+     Converter.SAT2LP
      Converter.ObjType
      Converter.PB2LP
      Converter.LP2SMT
