--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -74,11 +74,15 @@ Library
      Algorithm.OmegaTest
      Algorithm.Simplex
      Algorithm.Simplex2
-     Converter.SAT2LP
      Converter.ObjType
-     Converter.PB2LP
      Converter.LP2SMT
      Converter.MaxSAT2LP
+     Converter.MaxSAT2WBO
+     Converter.PB2LP
+     Converter.PB2WBO
+     Converter.SAT2PB
+     Converter.SAT2LP
+     Converter.WBO2PB
      Data.AlgebraicNumber
      Data.AlgebraicNumber.Root
      Data.ArithRel
