--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -157,6 +157,11 @@ Executable lpconvert
   HS-Source-Dirs: lpconvert
   Build-Depends: base >=4 && <5, containers, filepath, parse-dimacs, toysolver
 
+Executable pbconvert
+  Main-is: pbconvert.hs
+  HS-Source-Dirs: pbconvert
+  Build-Depends: base >=4 && <5, containers, filepath, parse-dimacs, toysolver
+
 Test-suite TestSAT
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
