--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -77,6 +77,7 @@ Library
      Converter.ObjType
      Converter.LP2SMT
      Converter.MaxSAT2LP
+     Converter.MaxSAT2NLPB
      Converter.MaxSAT2WBO
      Converter.PB2LP
      Converter.PB2LSP
