--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -109,6 +109,7 @@ Library
      SAT.TheorySolver
      SAT.TseitinEncoder
      SAT.Types
+     SAT.UnsatBasedWBO
      SAT.Printer
      Text.GCNF
      Text.GurobiSol
