--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -82,6 +82,7 @@ Library
      Converter.PB2LP
      Converter.PB2LSP
      Converter.PB2WBO
+     Converter.PBSetObj
      Converter.SAT2PB
      Converter.SAT2LP
      Converter.WBO2PB
