implement msu4-like algorithm for PBO/WBO
Joao P. Marques-Silva and Jordi Planes.
Algorithms for Maximum Satisfiability using Unsatisfiable Cores.
In Design, Automation and Test in Europe, 2008 (DATE '08). March 2008.
pp. 408-413, doi:10.1109/date.2008.4484715.

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -112,6 +112,7 @@ Library
      SAT.MUS
      SAT.CAMUS
      SAT.PBO
+     SAT.PBO.MSU4
      SAT.PBO.UnsatBased
      SAT.TheorySolver
      SAT.TseitinEncoder
