--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -6,7 +6,7 @@ Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
 Maintainer:	masahiro.sakai@gmail.com
 Category:	Algorithms, Optimisation, Optimization
 Cabal-Version:	>= 1.8
-Synopsis:	Assorted decision procedures
+Synopsis:	Assorted decision procedures for SAT, Max-SAT, PB, MIP, etc
 Description:	Toy-level implementation of some decision procedures
 Bug-Reports:	https://github.com/msakai/toysolver/issues
 Extra-Source-Files:
@@ -18,6 +18,7 @@ Extra-Source-Files:
    src/pbverify.hs
    src/pigeonhole.hs
    src/Algorithm/Wang.hs
+   samples/gcnf/*.cnf
    samples/gcnf/*.gcnf
    samples/lp/*.lp
    samples/lp/error/*.lp
