--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -52,6 +52,7 @@ Library
      base >=4 && <5,
      containers >= 0.4.2, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6,
+     prettyclass >=1.0.0,
      OptDir, data-interval >=0.2.0
   Extensions:
      TypeFamilies
@@ -202,7 +203,7 @@ Test-suite TestPolynomial
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
   Main-is:           TestPolynomial.hs
-  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3, data-interval >=0.2.0
+  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3, data-interval >=0.2.0, prettyclass >=1.0.0
   Extensions: TemplateHaskell, DoAndIfThenElse
 
 Test-suite TestAReal
