--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -107,11 +107,11 @@ Library
      Data.LA.FOL
      Data.LBool
      Data.Polynomial
-     Data.Polynomial.FactorQ
-     Data.Polynomial.FactorZ
+     Data.Polynomial.Factorization.Integer
+     Data.Polynomial.Factorization.Rational
      Data.Polynomial.GBase
-     Data.Polynomial.Lagrange
-     Data.Polynomial.Sturm
+     Data.Polynomial.Interpolation.Lagrange
+     Data.Polynomial.RootSeparation.Sturm
      Data.Var
      SAT
      SAT.Integer
