--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -50,7 +50,7 @@ Library
   Hs-source-dirs: src
   Build-Depends:
      base >=4 && <5,
-     containers >= 0.4.2, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
+     containers >= 0.5, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6,
      prettyclass >=1.0.0,
      OptDir, data-interval >=0.2.0
@@ -161,7 +161,7 @@ Executable toysolver
 Executable toysat
   Main-is: toysat.hs
   HS-Source-Dirs: toysat
-  Build-Depends: base >=4 && <5, containers >= 0.4.2, array, parsec, bytestring, filepath, parse-dimacs, time, old-locale, unbounded-delays, vector-space >=0.8.6, toysolver
+  Build-Depends: base >=4 && <5, containers, array, parsec, bytestring, filepath, parse-dimacs, time, old-locale, unbounded-delays, vector-space >=0.8.6, toysolver
   Default-Language: Haskell2010
   Other-Extensions: ScopedTypeVariables, CPP
   if impl(ghc >= 7)
@@ -174,7 +174,7 @@ Executable toysat
 Executable toyfmf
   Main-is: toyfmf.hs
   HS-Source-Dirs: toyfmf
-  Build-Depends: base >=4 && <5, containers >= 0.4.2, toysolver, logic-TPTP
+  Build-Depends: base >=4 && <5, containers, toysolver, logic-TPTP
   Default-Language: Haskell2010
   if impl(ghc >= 7)
     GHC-Options: -rtsopts
