--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -116,7 +116,7 @@ Library
      Data.Polynomial
      Data.Polynomial.Factorization.Integer
      Data.Polynomial.Factorization.Rational
-     Data.Polynomial.GBase
+     Data.Polynomial.GBasis
      Data.Polynomial.Interpolation.Lagrange
      Data.Polynomial.RootSeparation.Graeffe
      Data.Polynomial.RootSeparation.Sturm
