--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -53,7 +53,7 @@ Library
      containers >= 0.4.2, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6, multiset, algebra,
      prettyclass >=1.0.0,
-     OptDir, data-interval >=0.2.0
+     OptDir, data-interval >=0.2.0, finite-field >=0.5.0
   Default-Language: Haskell2010
   Other-Extensions:
      BangPatterns
