--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -252,6 +252,14 @@ Test-suite TestContiTraverso
   Default-Language: Haskell2010
   Other-Extensions: TemplateHaskell
 
+Test-suite TestCongruenceClosure
+  Type:              exitcode-stdio-1.0
+  HS-Source-Dirs:    test
+  Main-is:           TestCongruenceClosure.hs
+  Build-depends:     base >=4 && <5, containers, toysolver, test-framework,test-framework-th,test-framework-hunit,test-framework-quickcheck2,HUnit,QuickCheck >=2 && <3
+  Default-Language: Haskell2010
+  Other-Extensions: TemplateHaskell
+
 Test-suite TestLPFile
   Type:              exitcode-stdio-1.0
   HS-Source-Dirs:    test
