--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -53,7 +53,7 @@ Library
      base >=4 && <5,
      containers >= 0.4.2, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6, multiset, algebra,
-     prettyclass >=1.0.0,
+     prettyclass >=1.0.0, type-level-numbers,
      OptDir, data-interval >=0.2.0, finite-field >=0.6.0
   Default-Language: Haskell2010
   Other-Extensions:
@@ -116,6 +116,7 @@ Library
      Data.LBool
      Data.Polynomial
      Data.Polynomial.Factorization.FiniteField
+     Data.Polynomial.Factorization.Hensel
      Data.Polynomial.Factorization.Integer
      Data.Polynomial.Factorization.Rational
      Data.Polynomial.Factorization.SquareFree
