--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -53,7 +53,7 @@ Library
      base >=4 && <5,
      containers >= 0.4.2, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6, multiset, algebra,
-     prettyclass >=1.0.0, type-level-numbers,
+     prettyclass >=1.0.0, type-level-numbers, hashable >=1.1.2.5 && <1.3.0.0,
      OptDir, data-interval >=0.2.0, finite-field >=0.6.0
   Default-Language: Haskell2010
   Other-Extensions:
