--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -55,7 +55,7 @@ Library
      containers >= 0.4.2, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6, multiset, algebra,
      prettyclass >=1.0.0, type-level-numbers >=0.1.1.0 && <0.2.0.0, hashable >=1.1.2.5 && <1.3.0.0,
-     OptDir, data-interval >=0.2.0, finite-field >=0.7.0 && <1.0.0
+     OptDir, data-interval >=0.2.0, finite-field >=0.7.0 && <1.0.0, sign >=0.2.0 && <1.0.0
   Default-Language: Haskell2010
   Other-Extensions:
      BangPatterns
@@ -127,7 +127,6 @@ Library
      Data.Polynomial.Factorization.Zassenhaus
      Data.Polynomial.GroebnerBasis
      Data.Polynomial.Interpolation.Lagrange
-     Data.Sign
      Data.Var
      SAT
      SAT.Integer
