--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -52,7 +52,7 @@ Library
   Hs-source-dirs: src
   Build-Depends:
      base >=4 && <5,
-     containers >= 0.4.2, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
+     containers >= 0.4.2, unordered-containers >=0.2.3 && <0.3.0, mtl, array, random, stm >=2.3, parsec, bytestring, filepath, deepseq, time, old-locale, primes,
      parse-dimacs, queue, heaps, unbounded-delays, lattices >=1.2.1.1, vector-space >=0.8.6, multiset, algebra,
      prettyclass >=1.0.0, type-level-numbers >=0.1.1.0 && <0.2.0.0, hashable >=1.1.2.5 && <1.3.0.0, intern >=0.9.1.2 && <1.0.0.0,
      OptDir, data-interval >=0.4.0, finite-field >=0.7.0 && <1.0.0, sign >=0.2.0 && <1.0.0
