implement a core-guided binary search algorithm BC

--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -136,6 +136,7 @@ Library
      SAT.MUS
      SAT.CAMUS
      SAT.PBO
+     SAT.PBO.BC
      SAT.PBO.MSU4
      SAT.PBO.UnsatBased
      SAT.TheorySolver
